# nhsdigital.manage-breast-screening-gateway

./: .env.development  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .tool-versions  Makefile  compose.yml  pyproject.toml
.azuredevops/pipelines/: deploy-app.yml  deploy.yml
.github/: SECURITY.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: 1_support_request.yaml  2_feature_request.yaml  3_bug_report.yaml
.github/workflows/: cicd-1-pull-request.yaml  cicd-2-main-branch.yaml  cicd-3-release.yaml  codeql.yaml  stage-1-commit.yaml  stage-2-test.yaml  stage-3-build.yaml  stage-4-deploy-app.yaml  stage-4-deploy-env.yaml  stage-4-deploy.yaml
docs/adr/: ADR-004_MWL_Daily_Backup_And_Reset.md  ADR-005_Managed_Identity_For_Azure_Relay.md
docs/deployment/: 16-Deploy-Script-Analysis.md
docs/deployment/infrastructure/: create-environment.md
docs/deployment/runbooks/: onboard-hospital-vm.md
docs/mwl/: README.md
docs/pacs/: README.md
infrastructure/environments/dev/: variables.sh  variables.tfvars
infrastructure/environments/preprod/: variables.sh  variables.tfvars
infrastructure/environments/prod/: variables.sh
infrastructure/environments/review/: variables.sh  variables.tfvars
infrastructure/modules/arc-infra/: arc.tf  azure_monitor.tf  outputs.tf  providers.tf  relay.tf  variables.tf
infrastructure/modules/gateway-test-vm/: main.tf  networking.tf  outputs.tf  providers.tf  variables.tf  vm.tf
infrastructure/terraform/: main.tf  outputs.tf  providers.tf  variables.tf
infrastructure/terraform/resource_group_init/: core.bicep  dns.bicep  keyVault.bicep  main.bicep  managedIdentity.bicep  privateEndpoint.bicep  storage.bicep
scripts/bash/: deploy_arc_ring.sh  deploy_stage.sh  resource_group_init.sh  smoke_test.sh  wait_ado_pipeline.sh  wait_arc_run_command.sh
scripts/bat/: backup_database.bat  schtasks.bat
scripts/powershell/: arc-setup.ps1  cleanup.ps1  deploy.ps1  smoke_test.ps1
scripts/python/: backup_database.py  verify_storage.py
scripts/terraform/: terraform.mk
src/: backup_main.py  db_backup.py  environment.py  models.py  mwl_clear.py  mwl_main.py  mwl_reset.py  pacs_main.py  relay_listener.py  server.py  telemetry.py  upload_main.py
src/services/: init_worklist_db.sql  storage.py
tests/: conftest.py  test_db_backup.py  test_environment.py  test_mwl_clear.py  test_relay_listener.py  test_server.py
tests/integration/: test_c_find_returns_worklist_items.py  test_c_store_saves_metadata.py  test_end_to_end_relay_to_upload.py  test_mwl_storage_patient_name_search.py  test_request_cfind_on_worklist.py  test_send_c_store_to_gateway.py
tests/services/: test_storage.py
(+11 files in other folders)
